gccida/c1/subst_asm_stack_regs
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst_asm_stack_regs/src/reg-stack.c:2340:1: error: must use 'enum' tag to refer to type 'reg_note'
reg_note *v13; // r8 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst_asm_stack_regs/src/reg-stack.c:2353:6: error: use of undeclared identifier 'fld'; did you mean 'fold'?
rtx *fld; // rsi 
     ^~~
     fold
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst_asm_stack_regs/src/tree.h:2822:13: note: 'fold' declared here
extern tree fold                PARAMS ((tree));
            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst_asm_stack_regs/src/reg-stack.c:2353:5: error: invalid operands to binary expression ('struct rtx_def *' and 'tree (tree)' (aka 'union tree_node *(union tree_node *)'))
rtx *fld; // rsi 
~~~ ^~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst_asm_stack_regs/src/reg-stack.c:2356:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class *v29; // r13 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst_asm_stack_regs/src/reg-stack.c:2357:4: error: expected ';' after expression
rtx v30; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst_asm_stack_regs/src/reg-stack.c:2357:5: error: use of undeclared identifier 'v30'; did you mean 'v10'?
rtx v30; // rax 
    ^~~
    v10
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst_asm_stack_regs/src/reg-stack.c:2337:9: note: 'v10' declared here
rtunion v10; // rax 
        ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst_asm_stack_regs/src/reg-stack.c:2363:1: error: must use 'enum' tag to refer to type 'reg_note'
reg_note *v36; // rcx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst_asm_stack_regs/src/reg-stack.c:2365:4: error: expected ';' after expression
rtx v38; // rsi 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst_asm_stack_regs/src/reg-stack.c:2365:5: error: use of undeclared identifier 'v38'
rtx v38; // rsi 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst_asm_stack_regs/src/reg-stack.c:2374:7: error: use of undeclared identifier 'v47'; did you mean 'v4'?
rtx **v47; // rsi 
      ^~~
      v4
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst_asm_stack_regs/src/reg-stack.c:2331:18: note: 'v4' declared here
 struct rtx_def *v4; // r14 
                 ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst_asm_stack_regs/src/reg-stack.c:2374:5: error: invalid operands to binary expression ('struct rtx_def *' and 'struct rtx_def')
rtx **v47; // rsi 
~~~ ^~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst_asm_stack_regs/src/reg-stack.c:2376:4: error: expected ';' after expression
rtx v49; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst_asm_stack_regs/src/reg-stack.c:2376:5: error: use of undeclared identifier 'v49'
rtx v49; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst_asm_stack_regs/src/reg-stack.c:2386:4: error: expected ';' after expression
rtx v60; // rsi 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst_asm_stack_regs/src/reg-stack.c:2386:5: error: use of undeclared identifier 'v60'
rtx v60; // rsi 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst_asm_stack_regs/src/reg-stack.c:2389:1: error: must use 'enum' tag to refer to type 'reg_note'
reg_note *v63; // r9 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst_asm_stack_regs/src/reg-stack.c:2390:4: error: expected ';' after expression
rtx v64; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst_asm_stack_regs/src/reg-stack.c:2390:5: error: use of undeclared identifier 'v64'
rtx v64; // rdx 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst_asm_stack_regs/src/reg-stack.c:2393:4: error: expected ';' after expression
rtx v67; // rdx 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst_asm_stack_regs/src/obj/reg-stack.o] Error 1
